<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/card_white"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editEmail"
                style="@style/EditTextStyle.Register"
                android:hint="@string/email_address" />

            <EditText
                android:id="@+id/editUserName"
                style="@style/EditTextStyle.Register"
                android:hint="@string/user_name" />

            <EditText
                android:id="@+id/editPassword1"
                style="@style/EditTextStyle.Register"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editPassword2"
                style="@style/EditTextStyle.Register"
                android:hint="@string/repeate_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonNext"
                style="@style/ButtonStyle.Home_Blue"
                android:layout_marginTop="15dp"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
    >
</FrameLayout>
