<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionsArray="@array/array_sex"
        app:title="@string/sex" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optionsArray="@array/array_age"
        app:title="@string/age" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.accela.esportsman.view.FontTextView
            style="@style/FontStyle.menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/other_info"
            android:textColor="@color/grey" />

        <com.accela.esportsman.view.FontTextView
            android:id="@+id/textOtherInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/other_info_details"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <com.accela.esportsman.view.SelectorView
        android:id="@+id/selectorCounty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/examination_county" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.accela.esportsman.view.FontTextView
            style="@style/FontStyle.menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/address"
            android:textColor="@color/grey" />

        <com.accela.esportsman.view.FontEditText
            android:id="@+id/editTextAddress"
            style="@style/FontStyle.menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:hint="@string/address_hint"
            app:fontFace="Monotype - New Clarendon MT Bold.ttf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.accela.esportsman.view.FontTextView
            style="@style/FontStyle.menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/contact_phone"
            android:textColor="@color/grey"
            app:fontFace="Monotype - New Clarendon MT Bold.ttf" />

        <com.accela.esportsman.view.FontEditText
            android:id="@+id/editTextPhone"
            style="@style/FontStyle.menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/black"
            android:maxLength="10"
            android:hint="@string/contact_hint"
            app:fontFace="Monotype - New Clarendon MT Bold.ttf" />

    </LinearLayout>
</LinearLayout>
