<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <com.accela.esportsman.view.SelectorView
        android:id="@+id/selectorWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/weight"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsLegSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/leg_saved"
        app:optionsArray="@array/array_yes_no"
        />
    <View
        android:id="@+id/seperatorLegSaved"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsBeardLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/beard_length"
        app:optionsArray="@array/array_beard_length"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsSpurLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/spur_length"
        app:optionsArray="@array/array_spur_length"
        />

</LinearLayout>
