<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.accela.esportsman.view.OptionsView
        android:id="@+id/optionsSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/sex"
        app:optionsArray="@array/array_sex"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <com.accela.esportsman.view.SelectorView
        android:id="@+id/selectorLAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/left_antler_points"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <com.accela.esportsman.view.SelectorView
        android:id="@+id/selectorRAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/right_antler_points"
        />
</LinearLayout>
