<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@mipmap/splash_background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/splash_logo"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:id="@+id/home_imageView" />

    <Button
        style="@style/ButtonStyle.Home_Blue"
        android:text="@string/dec_id_num"
        android:id="@+id/buttonDecID"
        android:layout_below="@+id/home_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/home_or"
        android:textSize="@dimen/h5"
        android:layout_below="@+id/buttonDecID"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="10dp" />
    <Button
        style="@style/ButtonStyle.Home_Blue"
        android:text="@string/drive_num"
        android:id="@+id/buttonDriverLicense"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/home_or"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDriverLicense"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.4"
            android:background="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in"
            android:id="@+id/home_sign_in"
            android:textSize="@dimen/h5"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/light_white" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.4"
            android:background="@color/grey"/>
    </LinearLayout>
</RelativeLayout>
