<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/loginRelativeId"
    tools:context=".MainActivity">


            <ImageView
                android:id="@+id/login_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="60dp"
                android:src="@mipmap/splash_logo" />

            <LinearLayout
                android:id="@+id/login_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_imageView"
                android:layout_marginTop="60dp"
                android:background="@drawable/login_card"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:id="@+id/userId"
                    style="@style/EditTextStyle.Login"
                    android:hint="@string/user_name" />

                <EditText
                    android:id="@+id/passwordId"
                    style="@style/EditTextStyle.Login"
                    android:layout_marginTop="-0.5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                style="@style/ButtonStyle.Home_Blue"
                android:layout_below="@+id/login_card"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/signin" />

            <LinearLayout
                android:id="@+id/forgotPwdLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">
                <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_weight="0.4"-->
                <!--android:background="@color/grey"/>-->
                <TextView
                    android:id="@+id/forgotPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/light_white"
                    android:textSize="@dimen/h5" />
                <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_weight="0.4"-->
                <!--android:background="@color/grey"/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotPwdLayoutId"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">
                <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_weight="0.4"-->
                <!--android:background="@color/grey"/>-->
                <TextView
                    android:id="@+id/registerNewUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:text="@string/register_new_account"
                    android:textColor="@color/light_white"
                    android:textSize="@dimen/h5" />
                <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_weight="0.4"-->
                <!--android:background="@color/grey"/>-->
            </LinearLayout>


</RelativeLayout>
